Fix MigrationSmokeTest V131/V132 version list (#723 #745 #746)
Add migrations "131" and "132" to the containsExactly assertion so
the allFlywayMigrationsRan test matches the FAIR-CAM control domain
migrations added by this PR (V131 and V132 per GC-I017).